test/classes/deitz/test_method_call2.good
test_method_call2.chpl:9: In function 'goo':
test_method_call2.chpl:10: error: unresolved call ':bar.foo(2)'
test_method_call2.chpl:6: note: candidates are: :bar.foo()
test_method_call2.chpl:1: note:                 foo(i: int)
